# pico-gen

./: Cargo.toml  README.md
src/: main.rs
template/: CMakeLists.txt
