[package]
name = "pico-gen"
version = "0.1.0"
edition = "2021"
include = ["/template"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
clap_derive = "4.0.21"
regex = "1.7.0"

[[bin]]
name = "pico-gen"